[gd_scene load_steps=2 format=3 uid="uid://ci3x45ef7v8fb"]

[ext_resource type="Script" path="res://main.gd" id="1_powng"]

[node name="Main" type="Node"]
script = ExtResource("1_powng")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.5
offset_top = -162.0
offset_right = 328.5
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="UI/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameEdit" type="LineEdit" parent="UI/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 10.0
placeholder_text = "Player name"
alignment = 1
max_length = 20

[node name="ColorRect" type="ColorRect" parent="UI/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
color = Color(0, 0.568627, 0.572549, 1)

[node name="HSeparator" type="HSeparator" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="AddressEdit" type="LineEdit" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Address to join"
alignment = 1
max_length = 20

[node name="JoinButton" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="StartButton" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[connection signal="gui_input" from="UI/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="button_down" from="UI/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="UI/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_button_down"]
[connection signal="button_down" from="UI/MainMenu/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
